feat: add my individual portfolio LSP-12

--- a/index.html
+++ b/index.html
@@ -153,21 +153,10 @@
         </a>
 
         <!--Member 6-->
-        <a
-          href="member6.html"
-          class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition"
-        >
-          <img
-            src="members/member2.jpg"
-            alt="Member 2"
-            class="h-40 w-40 rounded-full mx-auto object-cover"
-          />
-          <h3 class="mt-4 text-lg font-bold text-center text-pink-200">
-            Member 6
-          </h3>
-          <p class="text-sm text-center text-gray-500 mt-1">
-            Frontend Wizard ✨
-          </p>
+        <a href="team/member6.html" class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition">
+          <img src="static/images/members/member6.png" alt="Member 6" class="h-40 w-40 rounded-full mx-auto object-cover">
+          <h3 class="mt-4 text-lg font-bold text-center text-pink-200">Trisan Wagle</h3>
+          <p class="text-sm text-center text-gray-500 mt-1">Loves software dev, & learning data ✨</p>
         </a>
 
         <!--Member 7-->
