Complete profile for Suparna (feature/LSP-13)

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition"
         >
           <img
-            src="members/member2.jpg"
+            src="static/images/members/member5.png"
             alt="Member 2"
             class="h-40 w-40 rounded-full mx-auto object-cover"
           />
