--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
         <!--Member 7-->
         <a
-          href="member7.html"
+          href="team/member7.html"
           class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition"
         >
           <img
