fix: update my skills LSP-12

--- a/team/member6.html
+++ b/team/member6.html
@@ -172,6 +172,7 @@
                         <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Express.js</span>
                         <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Nest.js</span>
                         <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Gin (Go)</span>
+                        <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Django Rest Framework</span>
                     </div>
                 </div>
                 
@@ -198,6 +199,8 @@
                         <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">TRPC</span>
                         <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Redux</span>
                         <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">GraphQL</span>
+                        <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Scikit-learn</span>
+                        <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Keras</span>
                     </div>
                 </div>
                 
@@ -211,6 +214,8 @@
                         <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Chart.js</span>
                         <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">React-ChartJS</span>
                         <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Recharts</span>
+                        <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Matplotlib</span>
+                        <span class="bg-gray-100 px-3 py-1 rounded-full text-sm font-medium">Seaborn</span>
                     </div>
                 </div>
             </div>
