Changes on Main

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </a>
         
         <!--Member 4-->
-        <a href="member4.html" class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition">
-          <img src="members/member2.jpg" alt="Member 2" class="h-40 w-40 rounded-full mx-auto object-cover">
-          <h3 class="mt-4 text-lg font-bold text-center text-pink-200">Member 4</h3>
-          <p class="text-sm text-center text-gray-500 mt-1">Frontend Wizard ✨</p>
+        <a href="team/member4.html" class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition">
+          <img src="static/images/members/member4.jpg" alt="Member 2" class="h-40 w-40 rounded-full mx-auto object-cover">
+          <h3 class="mt-4 text-lg font-bold text-center text-pink-200">Rishav Upadhaya</h3>
+          <p class="text-sm text-center text-gray-500 mt-1">Backend, AI & Trekking 🏔️</p>
         </a>
 
         <!--Member 5-->
