--- a/index.html
+++ b/index.html
@@ -91,11 +91,9 @@
             class="h-40 w-40 rounded-full mx-auto object-cover"
           />
           <h3 class="mt-4 text-lg font-bold text-center text-pink-200">
-            Member 2
+            Suparna Neupane
           </h3>
-          <p class="text-sm text-center text-gray-500 mt-1">
-            Frontend Wizard ✨
-          </p>
+          <p class="text-sm text-center text-gray-500 mt-1">Learning AI/ML</p>
         </a>
 
         <!-- Member 3 -->
