--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             class="h-40 w-40 rounded-full mx-auto object-cover"
           />
           <h3 class="mt-4 text-lg font-bold text-center text-pink-200">
-            Suparna Neupane
+            Member 2
           </h3>
-          <p class="text-sm text-center text-gray-500 mt-1">Learning AI/ML</p>
+          <p class="text-sm text-center text-gray-500 mt-1">Add your info</p>
         </a>
 
         <!-- Member 3 -->
@@ -115,10 +115,21 @@
         </a>
 
         <!--Member 4-->
-        <a href="team/member4.html" class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition">
-          <img src="static/images/members/member4.jpg" alt="Member 2" class="h-40 w-40 rounded-full mx-auto object-cover">
-          <h3 class="mt-4 text-lg font-bold text-center text-pink-200">Rishav Upadhaya</h3>
-          <p class="text-sm text-center text-gray-500 mt-1">Backend, AI & Trekking 🏔️</p>
+        <a
+          href="team/member4.html"
+          class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition"
+        >
+          <img
+            src="static/images/members/member4.jpg"
+            alt="Member 2"
+            class="h-40 w-40 rounded-full mx-auto object-cover"
+          />
+          <h3 class="mt-4 text-lg font-bold text-center text-pink-200">
+            Rishav Upadhaya
+          </h3>
+          <p class="text-sm text-center text-gray-500 mt-1">
+            Backend, AI & Trekking 🏔️
+          </p>
         </a>
 
         <!--Member 5-->
@@ -132,18 +143,27 @@
             class="h-40 w-40 rounded-full mx-auto object-cover"
           />
           <h3 class="mt-4 text-lg font-bold text-center text-pink-200">
-            Member 5
+            Suparna Neupane
           </h3>
-          <p class="text-sm text-center text-gray-500 mt-1">
-            Frontend Wizard ✨
-          </p>
+          <p class="text-sm text-center text-gray-500 mt-1">Learning AI/ML</p>
         </a>
 
         <!--Member 6-->
-        <a href="team/member6.html" class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition">
-          <img src="static/images/members/member6.png" alt="Member 6" class="h-40 w-40 rounded-full mx-auto object-cover">
-          <h3 class="mt-4 text-lg font-bold text-center text-pink-200">Trisan Wagle</h3>
-          <p class="text-sm text-center text-gray-500 mt-1">Loves software dev, & learning data ✨</p>
+        <a
+          href="team/member6.html"
+          class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition"
+        >
+          <img
+            src="static/images/members/member6.png"
+            alt="Member 6"
+            class="h-40 w-40 rounded-full mx-auto object-cover"
+          />
+          <h3 class="mt-4 text-lg font-bold text-center text-pink-200">
+            Trisan Wagle
+          </h3>
+          <p class="text-sm text-center text-gray-500 mt-1">
+            Loves software dev, & learning data ✨
+          </p>
         </a>
 
         <!--Member 7-->
