--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
           class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition"
         >
           <img
-            src="members/member2.jpg"
-            alt="Member 2"
+            src="./static/images/members/member7.jpg"
+            alt="Member 7"
             class="h-40 w-40 rounded-full mx-auto object-cover"
           />
           <h3 class="mt-4 text-lg font-bold text-center text-pink-200">
-            Member 7
+            Yurisha Bajracharya
           </h3>
           <p class="text-sm text-center text-gray-500 mt-1">
-            Frontend Wizard ✨
+            Loves to learn and explore new things, new languages, and new cultures.
           </p>
         </a>
       </div>
