fix: fix jyoti profile

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </a>
 
         <!-- Member 3 -->
-        <a href="member3.html" class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition">
+        <a href="team/member3.html" class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition">
           <img src="static/images/members/jyoti-portfolio-picture.jpg" alt="Member 2" class="h-40 w-40 rounded-full mx-auto object-cover">
           <h3 class="mt-4 text-lg font-bold text-center text-pink-200">Jyoti Kumari Gupta</h3>
           <p class="text-sm text-center text-gray-500 mt-1">somewhere between everywhere ✨</p>
