--- a/team/member3.html
+++ b/team/member3.html
@@ -148,7 +148,7 @@
     </div>
 
     <div class="profile-box">
-      <img src="portfoliopicture.jpg" alt="Jyoti Gupta"> 
+      <img src="../static/images/members/jyoti-portfolio-picture.jpg" alt="Jyoti Gupta"> 
       <div class="info">
         <p><strong>Jyoti Kumari Gupta</strong> · She/her</p>
         <p>📍 Nepal</p>
