--- a/team/member5.html
+++ b/team/member5.html
@@ -285,7 +285,8 @@
                   >
                 </div>
                 <a
-                  href="#"
+                  href="https://github.com/sup-neupane/TensorFlow"
+                  target="_blank"
                   class="text-blue-600 hover:text-blue-800 font-semibold flex items-center space-x-1 transition-colors"
                 >
                   <span>View Project</span>
@@ -345,7 +346,8 @@
                   >
                 </div>
                 <a
-                  href="#"
+                  href="https://github.com/sup-neupane/Heart-Disease"
+                  target="_blank"
                   class="text-blue-600 hover:text-blue-800 font-semibold flex items-center space-x-1 transition-colors"
                 >
                   <span>View Project</span>
@@ -370,7 +372,8 @@
 
         <div class="text-center mt-12">
           <a
-            href="#"
+            href="https://github.com/sup-neupane"
+            target="_blank"
             class="inline-block bg-gradient-to-r from-blue-600 to-purple-600 text-white px-8 py-4 rounded-full font-semibold hover:from-blue-700 hover:to-purple-700 transition-all transform hover:-translate-y-1 shadow-lg"
           >
             View All Projects
@@ -422,7 +425,11 @@
               </div>
               <div>
                 <h3 class="font-semibold text-gray-800">Email</h3>
-                <p class="text-gray-600">suparna@example.com</p>
+                <a
+                  href="mailto:suparnaneupane1@gmail.com"
+                  class="text-gray-600 hover:text-blue-600 transition-colors"
+                  >suparnaneupane1@gmail.com</a
+                >
               </div>
             </div>
 
@@ -460,7 +467,8 @@
 
             <div class="flex space-x-4">
               <a
-                href="#"
+                href="https://github.com/sup-neupane"
+                target="_blank"
                 class="w-12 h-12 bg-gray-800 text-white rounded-xl flex items-center justify-center hover:bg-gray-700 transition-colors"
               >
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
@@ -470,7 +478,8 @@
                 </svg>
               </a>
               <a
-                href="#"
+                href="https://www.linkedin.com/in/suparna-neupane"
+                target="_blank"
                 class="w-12 h-12 bg-blue-600 text-white rounded-xl flex items-center justify-center hover:bg-blue-700 transition-colors"
               >
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
