Minor style update

--- a/team/member7.html
+++ b/team/member7.html
@@ -116,7 +116,7 @@
           <h3 class="font-bold text-pink-200">WLiT Fellowship 2024/25</h3>
           <p class="text-gray-300 text-sm">Women Leaders in Technology (WLiT)<br><span class="text-pink-400">Oct 2024 - Apr 2025</span></p>
         </div>
-        <div class="bg-custom-dark rounded-xl p-5 shadow-lg hover:shadow-pink-400 transition w-80 text-left">
+        <div class="bg-custom-dark rounded-xl p-5 shadow-lg transition w-80 text-left">
           <h3 class="text-lg font-bold text-pink-200 mb-1">Hour of Code Organizer</h3>
           <p class="text-gray-300 text-sm mb-2">Conducted Internet Safety & Hour of Code sessions for school students as a WLiT fellow, making coding fun and accessible.</p>
         </div>
