add member2 portfolio

--- a/index.html
+++ b/index.html
@@ -80,20 +80,19 @@
           </p>
         </a>
 
-        <!-- Member 2 -->
         <a
           href="team/member2.html"
           class="bg-gray-900 rounded-xl p-4 w-90 hover:shadow-[0_4px_20px_rgba(244,114,182,0.5)] transition"
         >
           <img
-            src="Static/untitled-white.svg"
-            alt="Member 2"
+            src="static/images/members/DipanPotrait.jpeg"
+            alt="dipan"
             class="h-40 w-40 rounded-full mx-auto object-cover"
           />
           <h3 class="mt-4 text-lg font-bold text-center text-pink-200">
-            Member 2
+            Dipan Silwal
           </h3>
-          <p class="text-sm text-center text-gray-500 mt-1">Add your info</p>
+          <p class="text-sm text-center text-gray-500 mt-1">In between procastinating and giving up.</p>
         </a>
 
         <!-- Member 3 -->
