--- a/team/member2.html
+++ b/team/member2.html
@@ -63,7 +63,7 @@
     <h2 class="text-4xl font-bold text-pink-300">Contact Me</h2>
     <p class="mt-6 text-lg text-gray-300">Feel free to connect with me:</p>
     <div class="mt-10 space-y-4">
-      <p class="text-gray-300">Email: <a href="mailto:dipansilwal@gmail.com class="text-pink-400 hover:underline">yourname@example.com</a></p>
+      <p class="text-gray-300">Email: <a href="mailto:dipansilwal@gmail.com class="text-pink-400 hover:underline">dipansilwal10@gmail.com</a></p>
       <p class="text-gray-300">LinkedIn: <a href="https://linkedin.com/in/dipansilwal" class="text-pink-400 hover:underline">linkedin.com/in/yourprofile</a></p>
       <p class="text-gray-300">GitHub: <a href="https://github.com/T-Poison10" class="text-pink-400 hover:underline">github.com/yourusername</a></p>
     </div>
